--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,11 +7,19 @@
 #chat-container {
   display: flex;
   border: 1px solid #cccccc;
+  border-radius: 15px;
   padding: 1em;
   margin: -1em 1em 1em -1em;
   flex-direction: column;
   justify-content: space-between;
   height: 500px;
+}
+
+#chat-input-box {
+  display: flex;
+  margin: -1em 1em 1em -1em;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* Alerts and form errors used by phx.new */
