--- a/lib/chat_web/components/layouts/app.html.heex
+++ b/lib/chat_web/components/layouts/app.html.heex
@@ -2,20 +2,11 @@
   <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Phoenix Framework">
+    <.live_title suffix=" · SW">
       <%= assigns[:page_title] || "LatestApp" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
-    <div class="container">
-      <.flash_group flash={@flash} />
-      <.header>Chat Storm</.header>
-      <span class="text-sm text-zinc-500">share knowledge with your team</span><br><br>
-      <%= @inner_content %>
-    </div>
-  </div>
-</main>
+<%= @inner_content %>
