--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,10 +29,10 @@
   justify-content: space-between;
 }
 
-#user-list p {
+/* #user-list p {
   margin: 0;
   padding: 0;
-}
+} */
 
 /* Alerts and form errors used by phx.new */
 .alert {
