--- a/lib/chat_web/live/room_live.html.heex
+++ b/lib/chat_web/live/room_live.html.heex
@@ -5,9 +5,12 @@
         <ChatWeb.RoomComponents.display_messages messages={@messages}/>
     </div>
     <div id="user-list">
-        <div class="font-bold my-2">Users online</div>
+        <div class="font-bold my-3">Users online</div>
         <%= for user <- @user_list do%>
-            <p><%= user %></p>
+            <div id={"#{user}-card"} class="flex my-1">
+                <p class="w-1/2 truncate "><%= user %></p>
+                <div class="w-1/2 my-0.5"><p class="hidden border-2 text-xs text-left text-zinc-500 border rounded-xl px-1 py-0.5">typing..</p></div>
+            </div>
         <% end %>
     </div>
 </div>
@@ -28,11 +31,11 @@
     <%!-- <div><%= @message %></div>
     <pre><%= inspect(@form, pretty: true, limit: :infinity) %></pre> --%>
 </div>
-<script>
+<%!-- <script>
     const chatBox = document.getElementById('chat-messages');
-
+    console.log("INSPECT:", chatBox.scrollHeight);
     // Function to scroll the chat box to the bottom
     function scrollToBottom() {
         chatBox.scrollTop = chatBox.scrollHeight;
     }
-</script>
+</script> --%>
